--- a/src/scss/partials/comments_bottom.scss
+++ b/src/scss/partials/comments_bottom.scss
@@ -1,12 +1,45 @@
 .comments_bottom{
 	margin-top: 2.5rem;
+
+	> .comments_bottom{
+		padding-left: 2.9rem;
+		margin-top: 3rem;
+	}
+}
+
+.comments_item{
+	margin-bottom: 3rem;
 }
 .comments_text{
+	margin-bottom: 1rem;
+
+    line-height: 1.3;
 	font-size: 1.2rem;
 	color: $white;
 }
+.comments_reply{
+	padding: 0;
+
+	border: none;
+	background: none;
+	cursor: pointer;
+
+	font-family: inherit;
+    font-size: 1.2rem;
+	line-height: 1.1;
+
+	color: $blu;
+
+	&:hover{
+		text-decoration: underline;
+	}
+
+}
+
+
 .comments_header{
 	display: flex;
+	margin-bottom: 1.5rem;
 }
 
 .comments_avatar{
@@ -15,6 +48,8 @@
     border-radius: 50%;
 }
 .comments_author{
+	line-height: 1.4rem;
+
 	flex-grow: 1;
 	padding-left: 1.5rem;
 }
