--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,10 +20,10 @@
 					</ul>
 				</li>
 				<li>
-					<a class="nav_link" href="#">О мені</a>
+					<a class="nav_link" href="Post.html">О мені</a>
 				</li>
 				<li>
-					<a class="nav_link" href="#">Реклама</a>
+					<a class="nav_link" href="Post.html">Реклама</a>
 				</li>
 			</ul>
 		</nav>
@@ -32,11 +32,11 @@
 		<nav class="nav">
 			<ul class="nav_list">
 				<li >
-					<a class="nav_link" href="#">Профіль</a>
+					<a class="nav_link" href="profile.html">Профіль</a>
 				</li>
 			</ul>
 		</nav>
-		<form class="search" action="/" method="post">
+		<form class="search" action="search.html" method="get">
 			<input class="search_input" type="text" placeholder="Пошук по блогу">
 		</form>
 	</div>
