--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -44,7 +44,7 @@
 
 
 	<div class="sidebar-footer">
-		<button class="btn btn-red" type="button">Мої роботи</button>
+		<a href="works.html" class="btn btn-red">Мої роботи</a>
 		<button class="btn btn-blu" type="button">Написати мені</button>
 	</div>
 
