--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,4 +5,6 @@ $z-index-sidebar: 1000;
 $sidebar-widht: 300px;
 $red: #ED3024;
 $blu: #3137C9;
-$black: #000000
+$black: #000000;
+
+$tablet_bp: 991px;
