--- a/src/scss/partials/works.scss
+++ b/src/scss/partials/works.scss
@@ -1,7 +1,63 @@
-.works{
+.page_title {
+	color: $white;
+	font-size: 2.1rem;
+	padding-bottom: 2.1rem;
+}
+
+.works {
+	display: flex;
 	margin-bottom: 3rem;
+	overflow: hidden;
 
 	background-color: $primary;
-	box-shadow: 0 15px 25px
-	rgba($black, 35%);
+	box-shadow: 0 15px 25px rgba($black, 35%);
 }
+
+.work_preview {
+	width: 310px;
+
+
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+
+.work_content {
+	display: flex;
+	flex-direction: column;
+	padding: 2.5rem;
+	max-width: 310px;
+
+}
+
+.work_title {
+	margin-bottom: 2.8rem;
+
+	color: $white;
+
+	font-weight: 500;
+	font-size: 2.4rem;
+
+	a {
+		color: inherit;
+	}
+}
+
+.work_description {
+	font-size: 1.6rem;
+	line-height: 1.68;
+	color: #D2D2D2;
+	font-weight: 300;
+
+	margin-bottom: 2.1rem;
+}
+
+.work_footer{
+	margin-top: auto;
+	text-align: right;
+}
+
+
