--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "_vars";
+@import "mixins";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -96,4 +97,8 @@ a{
 @import "partials/btn";
 @import "partials/stories";
 @import "partials/works";
+@import "partials/tags";
+@import "partials/profile_login";
+
+
 
